--- a/app/src/main/res/layout/list_attendance.xml
+++ b/app/src/main/res/layout/list_attendance.xml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="16dp"
+    android:paddingHorizontal="16dp"
+    android:background="@color/black"
     android:paddingVertical="3dp">
     <TextView
         android:id="@+id/txtRegNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor="@color/black"
+        android:textColor="#FF00FF"
         android:text="@string/_219000001"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/chkAction"
         app:layout_constraintBottom_toBottomOf="@id/chkAction"/>
 
     <ImageButton
-        android:id="@+id/btnStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnEdit"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@null"
-        android:src="@drawable/ic_yes"
-        android:layout_marginEnd="64dp"
+        android:src="@drawable/ic_edit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnDelete"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/todo" />
+
+    <ImageButton
+        android:id="@+id/btnDelete"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@null"
+        android:layout_marginEnd="32dp"
+        android:src="@drawable/ic_delete"
         app:layout_constraintEnd_toStartOf="@id/chkAction"
-        app:layout_constraintTop_toTopOf="@id/chkAction"
-        app:layout_constraintBottom_toBottomOf="@id/chkAction"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/todo" />
 
     <CheckBox
